Fixed footer and grid alignment on pages

--- a/style4.css
+++ b/style4.css
@@ -64,6 +64,16 @@ footer {
     background-image: url(https://gates84.github.io/footer%20background.png);
     padding: 10px;
     width: 100%;
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 9;
+    grid-row-end: 10;
+    position: relative;
+    bottom: 0px;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
     
 .wrapper {
@@ -133,8 +143,7 @@ footer {
 }
 
 .split1 {
-    display: flex;
-    flex-wrap: wrap;
+    display:flex;
     grid-column-start: 1;
     grid-column-end: 5;
     grid-row-start: 6;
@@ -142,14 +151,15 @@ footer {
 
 }
 .image2 {
-    width: 700px;
-    height: auto;
-    padding: 50px;
+    display: block;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .p_2 {
     padding: 50px;
-    padding-top: 80px;
+    padding-top: 20px;
 }
 
 .p_3 {
@@ -185,24 +195,13 @@ grid-row-end: 9;
     padding: 50px;
 }
 
-.footer {
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-row-start: 9;
-    grid-row-end: 10;
-    position: relative;
-    bottom: 0px;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
 .email {
     width: 2%;
     height: 2%;
     padding-left: 8px;
     padding-right: 8px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .email:hover {
@@ -210,6 +209,8 @@ grid-row-end: 9;
     height: 2.2%;
     padding-left: 8px;
     padding-right: 8px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .phone {
@@ -217,6 +218,8 @@ grid-row-end: 9;
     height: 2%;
     padding-left: 8px;
     padding-right: 8px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .phone:hover {
@@ -224,6 +227,8 @@ grid-row-end: 9;
     height: 2.2%;
     padding-left: 8px;
     padding-right: 8px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 @media (max-width: 620px) {
@@ -369,6 +374,35 @@ grid-row-end: 9;
         width: 100%;
         display: flex;
         flex-wrap: wrap;
+}
+
+.email {
+    width: 5%;
+    height: 5%;
+    padding-left: 8px;
+    padding-right: 8px;
+    align-content: center;
+}
+
+.email:hover {
+    width: 2.2%;
+    height: 2.2%;
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+.phone {
+    width: 5%;
+    height: 5%;
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+.phone:hover {
+    width: 2.2%;
+    height: 2.2%;
+    padding-left: 8px;
+    padding-right: 8px;
 }
 
 /*Print stylesheet*/
